--- a/TazGraph/TazGraph.vcxproj.filters
+++ b/TazGraph/TazGraph.vcxproj.filters
@@ -74,4 +74,14 @@
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Src\Shaders\circleColorShading.frag" />
+    <None Include="Src\Shaders\circleColorShading.vert" />
+    <None Include="Src\Shaders\colorShading.frag" />
+    <None Include="Src\Shaders\colorShading.vert" />
+    <None Include="Src\Shaders\textureBright.frag" />
+    <None Include="Src\Shaders\textureBright.vert" />
+    <None Include="Src\Shaders\textureShading.frag" />
+    <None Include="Src\Shaders\textureShading.vert" />
+  </ItemGroup>
 </Project>
