--- a/TazGraphEngine/TazGraphEngine.vcxproj
+++ b/TazGraphEngine/TazGraphEngine.vcxproj
@@ -170,22 +170,29 @@
     <ClInclude Include="Camera2.5D\PerspectiveCamera.h" />
     <ClInclude Include="Camera2.5D\CameraManager.h" />
     <ClInclude Include="Camera2.5D\ICamera.h" />
+    <ClInclude Include="ConsoleLogger.h" />
     <ClInclude Include="DebugRenderer\DebugRenderer.h" />
     <ClInclude Include="GOS\Animators\Animation.h" />
     <ClInclude Include="GOS\Animators\AnimatorComponent.h" />
     <ClInclude Include="GOS\Animators\AnimatorManager.h" />
-    <ClInclude Include="GOS\ButtonComponent.h" />
-    <ClInclude Include="GOS\ColliderComponent.h" />
+    <ClInclude Include="GOS\Animators\MovingAnimation.h" />
+    <ClInclude Include="GOS\Animators\MovingAnimatorComponent.h" />
+    <ClInclude Include="GOS\Components\Graph\LinkComponent.h" />
+    <ClInclude Include="GOS\Components\Graph\NodeComponent.h" />
+    <ClInclude Include="GOS\Components\Util\ButtonComponent.h" />
+    <ClInclude Include="GOS\Components\Basic\ColliderComponent.h" />
     <ClInclude Include="GOS\Components.h" />
+    <ClInclude Include="GOS\Components\Util\KeyboardControllerComponent.h" />
+    <ClInclude Include="GOS\Components\Util\UILabel.h" />
     <ClInclude Include="GOS\GOS.h" />
     <ClInclude Include="GOS\GOSManager.h" />
     <ClInclude Include="GOS\Animators\FlashAnimation.h" />
     <ClInclude Include="GOS\Animators\FlashAnimatorComponent.h" />
-    <ClInclude Include="GOS\GridComponent.h" />
-    <ClInclude Include="GOS\Rectangle_w_Color.h" />
-    <ClInclude Include="GOS\RigidBodyComponent.h" />
-    <ClInclude Include="GOS\SpriteComponent.h" />
-    <ClInclude Include="GOS\TransformComponent.h" />
+    <ClInclude Include="GOS\Components\Util\GridComponent.h" />
+    <ClInclude Include="GOS\Components\Basic\Rectangle_w_Color.h" />
+    <ClInclude Include="GOS\Components\Util\RigidBodyComponent.h" />
+    <ClInclude Include="GOS\Components\Basic\SpriteComponent.h" />
+    <ClInclude Include="GOS\Components\Basic\TransformComponent.h" />
     <ClInclude Include="GraphScreen\IGraphScreen.h" />
     <ClInclude Include="GraphScreen\IMainGraph.h" />
     <ClInclude Include="GraphScreen\ScreenList.h" />
