--- a/TazGraph/CMakeLists.txt
+++ b/TazGraph/CMakeLists.txt
@@ -7,9 +7,9 @@ set(Header_Files
     "Src/App/App.h"
     "Src/AssetManager/AssetManager.h"
     "Src/Collision/Collision.h"
-    "Src/GOS/ScriptComponents.h"
-    "Src/GOS/Scripts/MainMenuBackground.h"
-    "Src/GOS/Scripts/ScoreComponent.h"
+    "Src/EditorIMGUI/EditorIMGUI.h"
+    "Src/GECS/ScriptComponents.h"
+    "Src/GECS/Scripts/MainMenuBackground.h"
     "Src/Graph.h"
     "Src/MainMenuScreen/MainMenuScreen.h"
     "Src/Map/Map.h"
@@ -20,6 +20,7 @@ set(Source_Files
     "Src/App/App.cpp"
     "Src/AssetManager/AssetManager.cpp"
     "Src/Collision/Collision.cpp"
+    "Src/EditorIMGUI/EditorIMGUI.cpp"
     "Src/Graph.cpp"
     "Src/main.cpp"
     "Src/MainMenuScreen/MainMenuScreen.cpp"
