--- a/TazGraphEngine/CMakeLists.txt
+++ b/TazGraphEngine/CMakeLists.txt
@@ -1,7 +1,7 @@
 message("\nInside TazGraphEngine Cmake...\n")
 
 set(PROJECT_NAME TazGraphEngine)
-#set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -z noexecstack")
+#set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -z noexGGECStack")
 ################################################################################
 # Source groups
 ################################################################################
@@ -10,39 +10,36 @@ set(Header_Files
     "Camera2.5D/CameraManager.h"
     "Camera2.5D/ICamera.h"
     "Camera2.5D/PerspectiveCamera.h"
-    "DebugRenderer/DebugRenderer.h"
-    "ECS/Animators/Animation.h"
-    "ECS/Animators/AnimatorComponent.h"
-    "ECS/Animators/AnimatorManager.h"
-    "ECS/Animators/FlashAnimation.h"
-    "ECS/Animators/FlashAnimatorComponent.h"
-    "ECS/ButtonComponent.h"
-    "ECS/ColliderComponent.h"
-    "ECS/Components.h"
-    "ECS/ECS.h"
-    "ECS/ECSManager.h"
-    "ECS/GridComponent.h"
-    "ECS/LightComponent.h"
-    "ECS/LightTextureComponent.h"
-    "ECS/Rectangle_w_Color.h"
-    "ECS/RigidBodyComponent.h"
-    "ECS/SpriteComponent.h"
-    "ECS/TileComponent.h"
-    "ECS/TransformComponent.h"
+    "Renderers/LineRenderer/LineRenderer.h"
+    "GECS/Animators/Animation.h"
+    "GECS/Animators/AnimatorComponent.h"
+    "GECS/Animators/AnimatorManager.h"
+    "GECS/Animators/FlashAnimation.h"
+    "GECS/Animators/FlashAnimatorComponent.h"
+    "GECS/Components/Util/ButtonComponent.h"
+    "GECS/Components/Basic/ColliderComponent.h"
+    "GECS/Components.h"
+    "GECS/GECS.h"
+    "GECS/GECSManager.h"
+    "GECS/Components/Util/GridComponent.h"
+    "GECS/Components/Basic/Rectangle_w_Color.h"
+    "GECS/Components/Util/RigidBodyComponent.h"
+    "GECS/Components/Basic/SpriteComponent.h"
+    "GECS/Components/Basic/TransformComponent.h"
     "GLSLProgram.h"
     "GLTexture.h"
-    "GraphScreen/IGraphScreen.h"
-    "GraphScreen/IMainGraph.h"
-    "GraphScreen/ScreenList.h"
+    "GraphScreen/IScene.h"
+    "GraphScreen/AppInterface.h"
+    "GraphScreen/SceneList.h"
     "Grid/Grid.h"
+    "ImGuiInterface/ImGuiInterface.h"
     "InputManager/InputManager.h"
     "picoPNG.h"
     "PNG_Letters.h"
     "ResourceManager/ResourceManager.h"
-    "SceneManager/SceneManager.h"
-    "SpriteBatch/SpriteBatch.h"
+    "Renderers/PlaneModelRenderer/PlaneModelRenderer.h"
     "TextureManager/TextureManager.h"
-    "Timing/Timing.h"
+    "BaseFPSLimiter/BaseFPSLimiter.h"
     "Vertex.h"
     "Window/Window.h"
 )
@@ -51,27 +48,30 @@ source_group("Header Files" FILES ${Header_Files})
 set(Source_Files
     "AudioEngine/AudioEngine.cpp"
     "Camera2.5D/OrthoCamera.h"
-    "DebugRenderer/DebugRenderer.cpp"
-    "ECS/ECS.cpp"
-    "GraphScreen/IGraphScreen.cpp"
-    "GraphScreen/IMainGraph.cpp"
+    "Renderers/LineRenderer/LineRenderer.cpp"
+    "GECS/GECS.cpp"
+    "GraphScreen/IScene.cpp"
+    "GraphScreen/AppInterface.cpp"
     "GraphScreen/ScreenIndices.h"
-    "GraphScreen/ScreenList.cpp"
+    "GraphScreen/SceneList.cpp"
     "Grid/Grid.cpp"
+    "ImGuiInterface/ImGuiInterface.cpp"
     "imgui/imgui.cpp"
+    "imgui/imgui_combo_autoselect.cpp"
     "imgui/imgui_demo.cpp"
     "imgui/imgui_draw.cpp"
     "imgui/imgui_impl_opengl3.cpp"
     "imgui/imgui_impl_sdl2.cpp"
     "imgui/imgui_tables.cpp"
     "imgui/imgui_widgets.cpp"
+    "imgui/implot.cpp"
+    "imgui/implot_items.cpp"
     "InputManager/InputManager.cpp"
     "PNG_Letters.cpp"
     "ResourceManager/ResourceManager.cpp"
-    "SceneManager/SceneManager.cpp"
-    "SpriteBatch/SpriteBatch.cpp"
+    "Renderers/PlaneModelRenderer/PlaneModelRenderer.cpp"
     "TextureManager/TextureManager.cpp"
-    "Timing/Timing.cpp"
+    "BaseFPSLimiter/BaseFPSLimiter.cpp"
     "Window/Window.cpp"
 )
 source_group("Source Files" FILES ${Source_Files})
