--- a/TazGraphEngine/TazGraphEngine.vcxproj
+++ b/TazGraphEngine/TazGraphEngine.vcxproj
@@ -139,7 +139,7 @@
     <ClCompile Include="AudioEngine\AudioEngine.cpp" />
     <ClCompile Include="Camera2.5D\OrthoCamera.h" />
     <ClCompile Include="Renderers\LineRenderer\LineRenderer.cpp" />
-    <ClCompile Include="GOS\GOS.cpp" />
+    <ClCompile Include="GECS\GECS.cpp" />
     <ClCompile Include="GraphScreen\IScene.cpp" />
     <ClCompile Include="GraphScreen\AppInterface.cpp" />
     <ClCompile Include="GraphScreen\ScreenIndices.h" />
@@ -171,27 +171,27 @@
     <ClInclude Include="Camera2.5D\ICamera.h" />
     <ClInclude Include="ConsoleLogger.h" />
     <ClInclude Include="DataManager\DataManager.h" />
-    <ClInclude Include="GOS\GOSEntityTypes.h" />
+    <ClInclude Include="GECS\GECSEntityTypes.h" />
     <ClInclude Include="Renderers\LineRenderer\LineRenderer.h" />
-    <ClInclude Include="GOS\Animators\Animation.h" />
-    <ClInclude Include="GOS\Animators\AnimatorComponent.h" />
-    <ClInclude Include="GOS\Animators\AnimatorManager.h" />
-    <ClInclude Include="GOS\Animators\MovingAnimation.h" />
-    <ClInclude Include="GOS\Animators\MovingAnimatorComponent.h" />
-    <ClInclude Include="GOS\Components\Util\ButtonComponent.h" />
-    <ClInclude Include="GOS\Components\Basic\ColliderComponent.h" />
-    <ClInclude Include="GOS\Components.h" />
-    <ClInclude Include="GOS\Components\Util\KeyboardControllerComponent.h" />
-    <ClInclude Include="GOS\Components\Util\UILabel.h" />
-    <ClInclude Include="GOS\GOS.h" />
-    <ClInclude Include="GOS\GOSManager.h" />
-    <ClInclude Include="GOS\Animators\FlashAnimation.h" />
-    <ClInclude Include="GOS\Animators\FlashAnimatorComponent.h" />
-    <ClInclude Include="GOS\Components\Util\GridComponent.h" />
-    <ClInclude Include="GOS\Components\Basic\Rectangle_w_Color.h" />
-    <ClInclude Include="GOS\Components\Util\RigidBodyComponent.h" />
-    <ClInclude Include="GOS\Components\Basic\SpriteComponent.h" />
-    <ClInclude Include="GOS\Components\Basic\TransformComponent.h" />
+    <ClInclude Include="GECS\Animators\Animation.h" />
+    <ClInclude Include="GECS\Animators\AnimatorComponent.h" />
+    <ClInclude Include="GECS\Animators\AnimatorManager.h" />
+    <ClInclude Include="GECS\Animators\MovingAnimation.h" />
+    <ClInclude Include="GECS\Animators\MovingAnimatorComponent.h" />
+    <ClInclude Include="GECS\Components\Util\ButtonComponent.h" />
+    <ClInclude Include="GECS\Components\Basic\ColliderComponent.h" />
+    <ClInclude Include="GECS\Components.h" />
+    <ClInclude Include="GECS\Components\Util\KeyboardControllerComponent.h" />
+    <ClInclude Include="GECS\Components\Util\UILabel.h" />
+    <ClInclude Include="GECS\GECS.h" />
+    <ClInclude Include="GECS\GECSManager.h" />
+    <ClInclude Include="GECS\Animators\FlashAnimation.h" />
+    <ClInclude Include="GECS\Animators\FlashAnimatorComponent.h" />
+    <ClInclude Include="GECS\Components\Util\GridComponent.h" />
+    <ClInclude Include="GECS\Components\Basic\Rectangle_w_Color.h" />
+    <ClInclude Include="GECS\Components\Util\RigidBodyComponent.h" />
+    <ClInclude Include="GECS\Components\Basic\SpriteComponent.h" />
+    <ClInclude Include="GECS\Components\Basic\TransformComponent.h" />
     <ClInclude Include="GraphScreen\IScene.h" />
     <ClInclude Include="GraphScreen\AppInterface.h" />
     <ClInclude Include="GraphScreen\SceneList.h" />
