--- a/TazGraph/TazGraph.vcxproj.filters
+++ b/TazGraph/TazGraph.vcxproj.filters
@@ -56,10 +56,10 @@
     <ClInclude Include="Src\MainMenuScreen\MainMenuScreen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Src\GOS\ScriptComponents.h">
+    <ClInclude Include="Src\GECS\ScriptComponents.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Src\GOS\Scripts\MainMenuBackground.h">
+    <ClInclude Include="Src\GECS\Scripts\MainMenuBackground.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Src\App\App.h">
