make line renderer part of resource manager -> fix loading again bug

--- a/TazGraph/imgui.ini
+++ b/TazGraph/imgui.ini
@@ -11,7 +11,7 @@ Pos=-1,81
 Size=289,439
 
 [Window][Performance]
-Pos=-7,372
+Pos=-2,353
 Size=299,690
 
 [Window][Control Window]
@@ -33,4 +33,8 @@ Size=400,100
 [Window][Loading...]
 Pos=760,458
 Size=400,100
+
+[Window][Entity List]
+Pos=1659,29
+Size=237,1011
 
