--- a/TazGraphEngine/TazGraphEngine.vcxproj.filters
+++ b/TazGraphEngine/TazGraphEngine.vcxproj.filters
@@ -227,5 +227,8 @@
     <ClInclude Include="DataManager\DataManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="JsonParser\JsonParser.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
