--- a/TazGraphEngine/TazGraphEngine.vcxproj
+++ b/TazGraphEngine/TazGraphEngine.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="Window\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AABB\AABB.h" />
     <ClInclude Include="AudioEngine\AudioEngine.h" />
     <ClInclude Include="Camera2.5D\PerspectiveCamera.h" />
     <ClInclude Include="Camera2.5D\CameraManager.h" />
