--- a/TazGraph/imgui.ini
+++ b/TazGraph/imgui.ini
@@ -7,12 +7,12 @@ Pos=781,140
 Size=233,48
 
 [Window][Background UI]
-Pos=-1,81
+Pos=0,84
 Size=331,439
 
 [Window][Performance]
-Pos=-2,353
-Size=299,690
+Pos=-2,522
+Size=299,521
 
 [Window][Control Window]
 Pos=860,408
@@ -35,6 +35,6 @@ Pos=760,458
 Size=400,100
 
 [Window][Entity List]
-Pos=1683,2
+Pos=1679,-9
 Size=237,1011
 
