--- a/TazGraph/imgui.ini
+++ b/TazGraph/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=585,206
 Size=400,400
 
 [Window][Default UI]
@@ -7,11 +7,11 @@ Pos=781,140
 Size=233,48
 
 [Window][Background UI]
-Pos=-9,72
-Size=300,804
+Pos=16,48
+Size=300,498
 
 [Window][Performance]
-Pos=-2,522
+Pos=7,550
 Size=299,521
 
 [Window][Control Window]
@@ -35,6 +35,26 @@ Pos=760,458
 Size=400,100
 
 [Window][Entity List]
-Pos=1683,2
-Size=237,1011
+Pos=1688,8
+Size=218,1011
+
+[Window][Viewport]
+Pos=618,8
+Size=910,1004
+
+[Window][DockSpace Demo]
+Pos=370,85
+Size=1032,623
+
+[Window][Example Window]
+Pos=0,0
+Size=1920,1017
+
+[Window][Tab 1]
+Pos=358,71
+Size=205,934
+
+[Window][Tab 2]
+Pos=1518,6
+Size=391,991
 
