--- a/TazGraph/TazGraph.vcxproj
+++ b/TazGraph/TazGraph.vcxproj
@@ -184,6 +184,8 @@
     <None Include="Src\Shaders\circleColorShading.vert" />
     <None Include="Src\Shaders\colorShading.frag" />
     <None Include="Src\Shaders\colorShading.vert" />
+    <None Include="Src\Shaders\framebuffer.frag" />
+    <None Include="Src\Shaders\framebuffer.vert" />
     <None Include="Src\Shaders\lineColorShading.frag" />
     <None Include="Src\Shaders\lineColorShading.vert" />
     <None Include="Src\Shaders\textureBright.frag" />
