--- a/TazGraphEngine/CMakeLists.txt
+++ b/TazGraphEngine/CMakeLists.txt
@@ -37,6 +37,7 @@ set(Header_Files
     "picoPNG.h"
     "PNG_Letters.h"
     "ResourceManager/ResourceManager.h"
+    "Renderers/FrameBuffer/Framebuffer.h"
     "Renderers/PlaneModelRenderer/PlaneModelRenderer.h"
     "TextureManager/TextureManager.h"
     "BaseFPSLimiter/BaseFPSLimiter.h"
@@ -69,6 +70,7 @@ set(Source_Files
     "InputManager/InputManager.cpp"
     "PNG_Letters.cpp"
     "ResourceManager/ResourceManager.cpp"
+    "Renderers/FrameBuffer/Framebuffer.cpp"
     "Renderers/PlaneModelRenderer/PlaneModelRenderer.cpp"
     "TextureManager/TextureManager.cpp"
     "BaseFPSLimiter/BaseFPSLimiter.cpp"
