--- a/TazGraph/imgui.ini
+++ b/TazGraph/imgui.ini
@@ -1,6 +1,7 @@
 [Window][Debug##Default]
-Pos=585,206
+Pos=677,75
 Size=400,400
+Collapsed=1
 
 [Window][Default UI]
 Pos=781,140
@@ -61,4 +62,8 @@ Size=391,991
 [Window][Main Window]
 Pos=0,0
 Size=1920,1017
+
+[Window][Scene Tabs]
+Pos=598,19
+Size=626,54
 
