--- a/TazGraph/imgui.ini
+++ b/TazGraph/imgui.ini
@@ -64,6 +64,10 @@ Pos=0,0
 Size=1920,1017
 
 [Window][Scene Tabs]
-Pos=598,19
+Pos=661,58
 Size=626,54
+
+[Window][Display Entity Statistics]
+Pos=6,4
+Size=184,48
 
