--- a/TazGraphEngine/TazGraphEngine.vcxproj
+++ b/TazGraphEngine/TazGraphEngine.vcxproj
@@ -183,8 +183,10 @@
     <ClInclude Include="Camera2.5D\ICamera.h" />
     <ClInclude Include="ConsoleLogger.h" />
     <ClInclude Include="DataManager\DataManager.h" />
+    <ClInclude Include="GECS\Animators\LineAnimators\LineFlashAnimatorComponent.h" />
     <ClInclude Include="GECS\Components\Basic\Line_w_Color.h" />
     <ClInclude Include="GECS\Components\Basic\Triangle_w_Color.h" />
+    <ClInclude Include="GECS\Components\Util\PollingComponent.h" />
     <ClInclude Include="GECS\UtilComponents.h" />
     <ClInclude Include="GECS\GECSEntityTypes.h" />
     <ClInclude Include="JsonParser\JsonParser.h" />
